// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MovieWrapper should renders correctly 1`] = `
Array [
  <div
    className="movie-card__bg"
  >
    <img
      alt=""
      src=""
    />
  </div>,
  <main-header />,
]
`;

exports[`MovieWrapper should renders correctly with children 1`] = `
Array [
  <div
    className="movie-card__bg"
  >
    <img
      alt=""
      src=""
    />
  </div>,
  <main-header />,
  <div
    className="movie-card__wrap"
  >
    <div>
      blah-blah
    </div>
  </div>,
]
`;

exports[`MovieWrapper should renders correctly with render props 1`] = `
Array [
  <div
    className="movie-card__bg"
  >
    <img
      alt=""
      src=""
    />
  </div>,
  <main-header />,
]
`;
